--- a/l10n_it_ricevute_bancarie/wizard/wizard_accreditation.xml
+++ b/l10n_it_ricevute_bancarie/wizard/wizard_accreditation.xml
@@ -10,18 +10,18 @@
             <field name="arch" type="xml">
                 <form string="Ri.Ba. Accreditation">
                     <separator string="This wizard generates the journal entry related to accreditation received from the bank" colspan="4"/>
-					<field name="accreditation_journal_id" />
+                    <field name="accreditation_journal_id" />
                     <newline/>
-					<field name="accreditation_account_id" />
-					<field name="accreditation_amount" />
-					<field name="bank_account_id" />
-					<field name="bank_amount" />
-					<field name="bank_expense_account_id" />
-					<field name="expense_amount" />
+                    <field name="accreditation_account_id" />
+                    <field name="accreditation_amount" />
+                    <field name="bank_account_id" />
+                    <field name="bank_amount" />
+                    <field name="bank_expense_account_id" />
+                    <field name="expense_amount" />
                     <button string="Cancel" special="cancel" icon="gtk-cancel" colspan="2"/>
                     <button string="Create" name="create_move" type="object" icon="gtk-ok" colspan="2"/>
-                    <separator string="You can also skip this step and set the distinta status to 'accredited' anyway" colspan="4"/>
-                    <button string="Skip and confirm accreditation" name="skip" type="object" icon="gtk-apply" colspan="4"/>
+                    <!--separator string="You can also skip this step and set the distinta status to 'accredited' anyway" colspan="4"/-->
+                    <!--button string="Skip and confirm accreditation" name="skip" type="object" icon="gtk-apply" colspan="4"/-->
                 </form>
             </field>
         </record>
@@ -35,8 +35,44 @@
             <field name="view_mode">form</field>
             <field name="target">new</field>
             <field name="view_id" ref="riba_accreditation"/>
-
         </record>
-        
+
+<!-- accreditation from distinta line view -->
+
+        <record id="riba_line_accreditation" model="ir.ui.view">
+            <field name="name">riba.accreditation.line.wizard</field>
+            <field name="model">riba.accreditation</field>
+            <field name="type">form</field>
+            <field name="arch" type="xml">
+                <form string="Ri.Ba. Line Accreditation">
+                    <separator string="This wizard generates the journal entry related to accreditation received from the bank" colspan="4"/>
+                    <field name="accreditation_journal_id" />
+                    <field name="date_accreditation" />
+                    <newline/>
+                    <field name="accreditation_account_id" />
+                    <field name="accreditation_amount" />
+                    <field name="bank_account_id" />
+                    <field name="bank_amount" />
+                    <field name="bank_expense_account_id" />
+                    <field name="expense_amount" />
+                    <button string="Cancel" special="cancel" icon="gtk-cancel" colspan="2"/>
+                    <button string="Create" name="create_move" type="object" icon="gtk-ok" colspan="2"/>
+                    <separator string="You can also skip this step and set the distinta status to 'accredited' anyway" colspan="4"/>
+                    <button string="Skip and confirm accreditation" name="skip" type="object" icon="gtk-apply" colspan="4"/>
+                </form>
+            </field>
+        </record>
+
+       <act_window name="Accreditation Ri.Ba. from line view"
+            res_model="riba.accreditation"
+            src_model="riba.distinta.line"
+            key2="client_action_multi"
+            view_mode="form"
+            view_type="form"
+            target="new"
+            multi="True"
+            id="action_riba_line_accreditation"
+            view_id="riba_line_accreditation"/>
+
     </data>
 </openerp>
