--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -20,6 +20,8 @@ body.openerp {
 .openerp .view-manager-main-content {
     width: 100%;
     padding: 0 8px 8px 8px;
+    border: 1px solid #C8C8D3;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 }
 
 .openerp .oe_form_frame_cell .view-manager-main-content {
@@ -478,7 +480,7 @@ label.error {
     border-bottom: 1px solid #e6e6e6;
     width: 21px;
     height: 21px;
-    background: #e6e6e6;
+    background: #7C7BAD;
 }
 .openerp .secondary_menu.oe_folded .oe_toggle_secondary_menu span.oe_menu_fold {
     display: none;
@@ -516,7 +518,7 @@ label.error {
     margin-left: 200px;
     margin-top: 20px;
     z-index: 100;
-    border: 4px solid #e6e6e6;
+
     border-color: #e6e6e6;
     border-radius: 4px;
     min-width: 200px;
@@ -551,13 +553,13 @@ label.error {
 .openerp a.oe_secondary_submenu_item:hover,
 .openerp a.oe_secondary_submenu_item.leaf.active {
     display: block;
-    background: #8e8e8e; /* Old browsers */
-    background: none;
+    background: #E6E6E6 none repeat scroll 0% 0%;
     padding: 0 5px 2px 10px;
     line-height: 20px;
     color: #000;
     font-weight: bold;
     text-decoration: none;
+
 }
 .openerp a.oe_secondary_submenu_item.submenu.opened span:before {
     content: "\25be";
@@ -1415,6 +1417,11 @@ label.error {
     color: inherit;
 }
 
+.blockUI.blockOverlay {
+  background-color: black;
+  opacity: 0.6;
+}
+
 /* Uneditable Form View */
 .openerp .oe_form_readonly {
 
@@ -1704,6 +1711,7 @@ label.error {
 }
 .openerp .ui-widget-header {
     border: 0px;
+    background: transparent url("/web/static/src/img/form_sheetbg.png") repeat scroll 0% 0%;
 }
 /* progress bars */
 .openerp .ui-progressbar .ui-widget-header {
@@ -1717,8 +1725,6 @@ label.error {
     width: 100%;
     height: 100%;
     border-collapse: collapse;
-    border: 1px solid #C8C8D3;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
     background: #FFF none repeat scroll 0% 0%;
 }
 
@@ -1812,7 +1818,6 @@ label.error {
     padding: 0;
     margin: 0;
     background: transparent url("/web/static/src/img/form_sheetbg.png") repeat scroll 0% 0%;
-    border-bottom: 1px solid #DDD;
 }
 
 .openerp .sidebar-main-div {
