--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -1164,15 +1164,18 @@ label.error {
 
 /* Notebook */
 .openerp .oe_form_notebook {
-    padding: 0;
-    background: none;
-    border-width: 0;
+    border-color: #DDD;
+    border-style: solid;
+    border-width: 0px 0px 1px;
+    background: white;
 }
 .openerp .oe_form_notebook .ui-tabs-panel {
     padding: 1px;
     -moz-border-radius-topright: 4px;
     -webkit-border-top-right-radius: 4px;
     border-top-right-radius: 4px;
+    color: #0069D6;
+    background: transparent none repeat scroll 0% 0%;
 }
 .openerp .oe_form_notebook ul.ui-tabs-nav {
     padding-left: 0;
@@ -1189,14 +1192,15 @@ label.error {
 }
 .openerp .oe_form_notebook ul.ui-tabs-nav li {
     font-weight: normal;
-    padding: 0px 10px 0px; 
+    padding: 0px 10px 0px;
 }
 .openerp .oe_form_notebook .ui-tabs-panel {
     background: #FAFAFA;
     border-width: 1px;
 }
 .openerp .oe_form_notebook .ui-tabs-selected {
-    background: #FAFAFA;
+    background: white;
+
 }
 /* Unedit Form */
 .openerp .field_char,
@@ -1258,6 +1262,7 @@ label.error {
 
 .openerp table.oe_frame td {
     color: #4c4c4c;
+    border: 0px;
 }
 .openerp td.oe_form_frame_cell {
     padding: 2px;
