--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -536,11 +536,11 @@ label.error {
     background: #FAFAFA;
 }
 .openerp .secondary_menu a.oe_secondary_menu_item {
-    background: #e6e6e6; /* Old browsers */
-    color: #0e0e0e;
-    border: 1px solid #8E8E8E;
-    border-radius: 4px;
-
+    font-weight: bold;
+    color: #7C7BAD;
+    border: 1px solid #AEAEAE;
+    border-radius: 14px;
+    background: transparent url("/web/static/src/img/form_sheetbg.png") repeat scroll 0% 0%
 }
 .openerp a.oe_secondary_submenu_item {
     padding: 0 5px 2px 10px;
@@ -553,13 +553,11 @@ label.error {
 .openerp a.oe_secondary_submenu_item:hover,
 .openerp a.oe_secondary_submenu_item.leaf.active {
     display: block;
-    background: #E6E6E6 none repeat scroll 0% 0%;
+    background:  #7c7bad none repeat scroll 0% 0%;
     padding: 0 5px 2px 10px;
     line-height: 20px;
-    color: #000;
-    font-weight: bold;
-    text-decoration: none;
-
+    color: white;
+    border-radius: 14px;
 }
 .openerp a.oe_secondary_submenu_item.submenu.opened span:before {
     content: "\25be";
@@ -1850,8 +1848,10 @@ label.error {
 }
 
 .openerp .sidebar-main-div a:hover {
-    color: black;
-    font-weight: bold;
+    color: white;
+    background-color: #7c7bad;
+    border-radius: 14px;
+    padding: 0px 0px 0px 0px;
 }
 
 .openerp .oe-sidebar-attachments-toolbar {
@@ -1911,7 +1911,7 @@ label.error {
 
 .openerp .view-manager-main-sidebar li {
     display: block;
-    padding: 3px 3px 3px 10px;
+    padding: 3px 3px 3px 30px;
 }
 
 .openerp .toggle-sidebar {
@@ -1938,7 +1938,8 @@ label.error {
 }
 
 .openerp .oe_sidebar_print ul {
-    padding-left:8px;
+    padding-left:15px;
+    font-weight: bold;
 }
 
 .openerp.kitten-mode-activated .main_table {
